# any-compute

./: Cargo.toml  Makefile  README.md  fix_c_reports.py  fix_mut_ctx.py  fix_sim_tab.py  fix_unwrap.py  regen_window.py  sim_tab.py
.github/instructions/: any.instructions.md
.github/skills/: animation.skill.md  bench.skill.md  canvas.skill.md  compute.skill.md  dom.skill.md  event.skill.md  ffi.skill.md  performance.skill.md
bindings/angular/src/: any-compute.module.ts  any-compute.service.ts
bindings/java/com/anycompute/: AnyCompute.java  AnyComputeTest.java
bindings/javascript/: any_compute.d.ts  any_compute.js  any_compute.test.js
bindings/node/: package.json
bindings/node/src/: bench.ts  index.ts
bindings/python/: any_compute.py  test_any_compute.py
bindings/react/: package.json
bindings/react/src/: bench.ts  hooks.ts
bindings/svelte/: package.json
bindings/svelte/src/: stores.ts
bindings/vue/: package.json
bindings/vue/src/: composables.ts
crates/bench/: Cargo.toml
crates/bench/src/: bench.css  gpu.rs  lib.rs  visual_test.html  window.rs
crates/canvas/: Cargo.toml
crates/canvas/fixtures/: palette.css  visual_test.css  visual_test.html
crates/canvas/shaders/: rect.wgsl
crates/canvas/src/: gpu.rs  lib.rs  scenario.rs  theme.rs
crates/core/: Cargo.toml
crates/core/shaders/: gemm.wgsl  map.wgsl  reduce.wgsl
crates/core/src/: animation.rs  bench.rs  compute.rs  data.rs  error.rs  hints.rs  interaction.rs  kernel.rs  layout.rs  lib.rs  render.rs  shader.rs
crates/core/src/dom/: mod.rs  style.rs  tree.rs
crates/dom/: Cargo.toml
crates/dom/src/: css.rs  lib.rs  parse.rs  style.rs  tailwind.css  tree.rs  ua.css
crates/ffi/: Cargo.toml
crates/ffi/src/: codegen.rs  lib.rs
crates/ffi/templates/: AnyCompute.java  AnyComputeTest.java  angular_package.json  angular_service.ts  node_bench.ts  node_index.ts  react_bench.ts  react_hooks.ts  react_package.json  svelte_stores.ts  test.js  test.py  types.d.ts  vue_composables.ts  wrapper.js  wrapper.py
crates/rsx/: Cargo.toml  build.rs
crates/rsx/assets/: bench.css
crates/rsx/src/: hooks.rs  lib.rs
crates/rsx/src/components/: data_grid.rs  mod.rs
examples/dom/: Cargo.toml  main.rs  playground.css  playground.html
