[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
any-compute-core = { path = "crates/core" }
any-compute-dom = { path = "crates/dom" }
any-compute-bench = { path = "crates/bench" }
any-compute-ffi = { path = "crates/ffi" }

# Shared deps — pinned once, inherited everywhere
thiserror = "2"
smallvec = { version = "1", features = ["union", "const_generics"] }
bumpalo = { version = "3", features = ["collections"] }
parking_lot = "0.12"
rayon = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
sysinfo = "0.35"
humansize = "2"
wgpu = "24"
naga = { version = "24", features = [
    "wgsl-in",
    "glsl-in",
    "spv-in",
    "spv-out",
    "glsl-out",
    "wgsl-out",
] }
winit = "0.29"
pollster = "0.3"
glyphon = "0.8"
png = "0.17"
