[package]
name = "any-compute-bench"
description = "Benchmark dashboard & performance comparison suite for any-compute DOM."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["window"]
# Enables the GPU dashboard binary (rendering via any-compute-canvas)
window = [
    "any-compute-core/wgpu-backend",
    "any-compute-core/hwinfo",
    "any-compute-canvas/gpu",
    "dep:rayon",
    "dep:env_logger",
]

[dependencies]
any-compute-core = { workspace = true }
any-compute-dom = { workspace = true }
any-compute-canvas = { workspace = true, default-features = false }

# Background threads for benchmark dashboard
rayon = { workspace = true, optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
any-compute-core = { workspace = true, features = ["hwinfo"] }
any-compute-dom = { workspace = true }

[[bin]]
name = "anv-bench-window"
path = "src/window.rs"
required-features = ["window"]
